2024-02-09T01:02:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7838161437 # 99
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-09
* notice: last 14d: unq all: 2 29
* notice: prev accum: outdated-unq outdated-all / unq all: 744 1176 / 761 1208
* notice: next accum: outdated-unq outdated-all / unq all: 746 1179 / 761 1208
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-25] / []

2024-02-08T16:17:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7832623185 # 98
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-08
* notice: last 14d: unq all: 2 30
* notice: prev accum: outdated-unq outdated-all / unq all: 744 1176 / 761 1207
* notice: next accum: outdated-unq outdated-all / unq all: 744 1176 / 761 1208
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-02-08]

2024-02-08T08:17:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7826694285 # 97
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-08
* notice: last 14d: unq all: 2 29
* notice: prev accum: outdated-unq outdated-all / unq all: 744 1176 / 760 1206
* notice: next accum: outdated-unq outdated-all / unq all: 744 1176 / 761 1207
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-25 2024-02-08]

2024-02-08T01:02:33Z: