@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-01-27T01:02:59Z",
-  "count" : 3,
+  "timestamp" : "2024-02-09T08:17:05Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
