@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-02-09T01:02:49Z",
+  "timestamp" : "2024-02-09T08:17:05Z",
   "count_outdated" : 1179,
   "uniques_outdated" : 746,
-  "count" : 1208,
-  "uniques" : 761,
+  "count" : 1209,
+  "uniques" : 762,
   "clones" : [
     {
       "timestamp": "2024-01-26T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "count_decinc": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -127,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
